<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".QuestaoCFragment">

        <TextView
            android:id="@+id/textViewQuestao3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:text="@string/Questao3"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <RadioGroup
            android:id="@+id/radioGroupQuestao3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewQuestao3">

            <RadioButton
                android:id="@+id/radioButtonQuestao3A"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Questao3_LetraA" />

            <RadioButton
                android:id="@+id/radioButtonQuestao3B"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Questao3_LetraB" />

            <RadioButton
                android:id="@+id/radioButtonQuestao3C"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Questao3_LetraC" />

            <RadioButton
                android:id="@+id/radioButtonQuestao3D"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Questao3_LetraD" />

        </RadioGroup>

        <Button
            android:id="@+id/buttonQuestao3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:text="@string/buttonConfirmar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroupQuestao3" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="00dp"
            android:layout_height="231dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_looks_3_24" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>